Fix carousel height issue on Safari Browser

--- a/components/carousel/src/sass/default.scss
+++ b/components/carousel/src/sass/default.scss
@@ -1,6 +1,5 @@
 .buic-carousel {
   &__viewport {
-    height: 100%;
     overflow: hidden;
     position: relative;
   }
